--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="">
     <h2><i class="fas fa-bus"></i></h2>
   </a>
-  <h2>Panel administracyjny komunikacji miejskiej</h2>
+  <h2>SimpleTube</h2>
 </nav>
 
 <div class="container-fluid">
