--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,10 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="">
-    <h2><i class="fas fa-bus"></i></h2>
-  </a>
-  <h2>SimpleTube</h2>
-</nav>
-
 <div class="container-fluid">
   <div class="row margin-bottom-div">
     <div class="col-xs-12 col-sm-4 offset-sm-4">
@@ -23,6 +16,12 @@
               <input type="password" class="form-control" id="password" [(ngModel)]="password" #pass="ngModel"
                 name="password" placeholder="Hasło" required />
             </div>
+            <div style="font-size: 10px">
+              Nie masz jeszcze konta? <button class="btn btn-secondary btn-sm"
+                (click)="navigateToRegistration()">Zarejestruj
+                się</button>
+            </div>
+            <br />
             <div class="d-flex justify-content-center">
               <button type="submit" class="btn btn-primary px-5">
                 Zaloguj
