--- a/client/src/app/my-movies/my-movies.component.html
+++ b/client/src/app/my-movies/my-movies.component.html
@@ -9,41 +9,54 @@
                     <div class="add-button-div">
                         <button class="btn btn-primary" (click)="openAddModal(content)">Dodaj film</button>
                     </div>
-                    <!-- <div class="table-responsive-md">
+                    <div *ngIf="!movies">
+                        <h3>Brak filmów</h3>
+                    </div>
+                    <div class="table-responsive-md">
                         <table id="dtBasicExample" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
-                                    <th class="th">Id
+                                    <th class="th">Tytuł
                                     </th>
-                                    <th class="th">Imię
+                                    <th class="th">Data dodania
                                     </th>
-                                    <th class="th">Nazwisko
+                                    <th class="th">Polubienia
                                     </th>
-                                    <th class="th">Login
+                                    <th class="th">Awersje
                                     </th>
-                                    <th class="th">Rola
+                                    <th class="th">Opis
                                     </th>
-                                    <th class="th">Akcje
+                                    <th class="th">Edytuj
+                                    </th>
+                                    <th class="th">Usuń
                                     </th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let user of users">
-                                    <td>{{user.id}}</td>
-                                    <td>{{user.firstName}}</td>
-                                    <td>{{user.lastName}}</td>
-                                    <td>{{user.login}}</td>
-                                    <td>{{getRoleName(user.role)}}</td>
+                                <tr *ngFor="let movie of movies">
+                                    <td>{{movie.title}}</td>
+                                    <td>{{movie.uploadDate.substring(0,10)}}</td>
+                                    <td>{{movie.likes}}</td>
+                                    <td>{{movie.dislikes}}</td>
                                     <td>
-                                        <button class="btn btn-warning" (click)="openEditModal(user.id, content)"><i
-                                                class="fas fa-edit"></i></button>
-                                        <button class="btn btn-danger" (click)="deleteUser(user.id)"><i
-                                                class="fas fa-trash-alt"></i></button>
+                                        <button class="btn btn-info" (click)="openEditModal(user.id, content)">
+                                            <fa-icon [icon]="faCommentDots"></fa-icon>
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-warning" (click)="openEditModal(user.id, content)">
+                                            <fa-icon [icon]="faEdit"></fa-icon>
+                                        </button>
+                                    </td>
+                                    <td>
+                                        <button class="btn btn-danger" (click)="deleteMovie(movie._id)">
+                                            <fa-icon [icon]="faTrashAlt"></fa-icon>
+                                        </button>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
@@ -75,15 +88,18 @@
             <div class="form-group">
                 <label for="description">Opis</label>
                 <div class="input-group">
-                    <input [(ngModel)]="description" id="description" name="description" ngControl="description"
-                        #descriptionText="ngModel" required class="form-control" placeholder="Podaj opis...">
+                    <!-- <input [(ngModel)]="description" id="description" name="description" ngControl="description"
+                        #descriptionText="ngModel" required class="form-control" placeholder="Podaj opis..."> -->
+                    <textarea [(ngModel)]="description" id="description" name="description" ngControl="description"
+                        #descriptionText="ngModel" required class="form-control" placeholder="Podaj opis..."
+                        rows="3"></textarea>
                 </div>
             </div>
             <div class="form-group">
                 <label for="dateOfBirth"></label>
                 <div class="input-group">
-                    <input type="file" [(ngModel)]="file" id="file" name="file" ngControl="file" #fileData="ngModel"
-                        required class="form-control" placeholder="Dodaj plik...">
+                    <input autofocus type="file" class="form-control" (change)="fileChanged($event)" id="file" required
+                        name="file" value=null placeholder="Dodaj plik" accept=".mp4" />
                 </div>
             </div>
         </form>
