feat(client): admin panel movies

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -17,9 +17,9 @@
                 name="password" placeholder="Hasło" required />
             </div>
             <div style="font-size: 10px">
-              Nie masz jeszcze konta? <button class="btn btn-secondary btn-sm"
+              Nie masz jeszcze konta? <label class="btn btn-secondary btn-sm"
                 (click)="navigateToRegistration()">Zarejestruj
-                się</button>
+                się</label>
             </div>
             <br />
             <div class="d-flex justify-content-center">
