--- a/client/src/app/movies/movies.component.css
+++ b/client/src/app/movies/movies.component.css
@@ -22,12 +22,10 @@
 .left {
     text-align: left;
 }
-
 .right {
     text-align: right;
 }
 
-.delete {
-    text-align: center;
-    max-width: 35px;
+.bold {
+    font-weight: bold;
 }
