--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -9,7 +9,16 @@
             <div class="list-group">
                 <a *ngFor="let movie of movies" routerLink="/player/{{movie._id}}"
                     class="list-group-item list-group-item-action">
-                    {{movie.title}}
+                    <div class="row">
+                        <div class="col">{{movie.title}}</div>
+                        <div class="col-4">Autor: {{movie.user.firstName}}</div>
+                        <div class="col-3">Dodane: {{movie.uploadDate.substring(0,10)}}</div>
+                        <div class="col">
+                            <fa-icon [icon]="faThumbsUp"></fa-icon>
+                            {{movie.likes}}:{{movie.likes}}
+                            <fa-icon [icon]="faThumbsDown"></fa-icon>
+                        </div>
+                    </div>
                 </a>
             </div>
         </div>
