--- a/client/src/app/movies/movies.component.css
+++ b/client/src/app/movies/movies.component.css
@@ -29,3 +29,13 @@
 .bold {
     font-weight: bold;
 }
+
+.delete {
+    text-align: center;
+    max-width: 35px;
+}
+
+.details {
+    text-align: center;
+    max-width: 50px;
+}
