--- a/client/src/app/my-movies/my-movies.component.css
+++ b/client/src/app/my-movies/my-movies.component.css
@@ -25,3 +25,13 @@
 .right {
     text-align: right;
 }
+
+.delete {
+    text-align: center;
+    max-width: 35px;
+}
+
+.details {
+    text-align: center;
+    max-width: 50px;
+}
