--- a/client/src/app/my-movies/my-movies.component.css
+++ b/client/src/app/my-movies/my-movies.component.css
@@ -28,10 +28,10 @@
 
 .delete {
     text-align: center;
-    max-width: 35px;
+    width: 25px;
 }
 
 .details {
     text-align: center;
-    max-width: 50px;
+    width: 200px;
 }
