--- a/client/src/app/users/users.component.html
+++ b/client/src/app/users/users.component.html
@@ -25,7 +25,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let user of users">
+                                <tr *ngFor="let user of pageOfItems">
                                     <!-- <td>{{user._id}}</td> -->
                                     <td>{{user.firstName}}</td>
                                     <td>{{user.lastName}}</td>
@@ -42,6 +42,26 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div *ngIf="users" class="row">
+        <div class="col">
+        </div>
+        <div class="col-8 center">
+            <div *ngIf="users" class="row">
+                <div class="col">
+                </div>
+                <div class="col">
+                    <div class=" pb-0 pt-3 center">
+                        <jw-pagination [items]="users" (changePage)="onChangePage($event)">
+                        </jw-pagination>
+                    </div>
+                </div>
+                <div class="col">
+                </div>
+            </div>
+        </div>
+        <div class="col">
         </div>
     </div>
 </div>
