--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -18,8 +18,9 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Szukaj..." aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Szukaj</button>
+            <input class="form-control mr-sm-2" #search type="search" placeholder="Szukaj..." aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" (click)="findMovie(search)"
+                type="submit">Szukaj</button>
         </form>
         <div *ngIf="isLoggedIn" class="mr-sm-2 log-button">
             <a class="btn btn-info logout-button" (click)="logout()">Wyloguj</a>
