feat: sendgrid added

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -46,3 +46,20 @@
         </div>
     </div>
 </div>
+
+<ng-template #content let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title" id="modal-basic-title">Aktywacja</h4>
+        <button type="button" class="close" aria-label="Close" (click)="closeModal(modal)">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="form-group">
+            <label for="description">Twoje konto zostało aktywowane!</label>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="closeModal(modal)">Ok</button>
+    </div>
+</ng-template>
